tests/negative/div_by_zero.sans
main() {
  x = 42 / 0
  p(itos(x))
}
